# Scratch-getdata

./: README.md  SECURITY.md  api_client.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: help.md
.github/workflows/: python-publish.yml
docs/: README.md
getdata.egg-info/: PKG-INFO  SOURCES.txt
scratch_getdata/: __init__.py
scratch_getdata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
