[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scratch-getdata"
version = "0.0.9"
authors = [
  { name="kokofixcomputers", email="none@none.com" },
]
description = "A Module to fetch scratch things from ScratchGetData"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kokofixcomputers/Scratch-getdata"
"Bug Tracker" = "https://github.com/kokofixcomputers/Scratch-getdata/issues"